2017-09-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (GetConfigureBlob): Fix SourceForge issue #472
	"NULL Pointer in GetConfigureBlob".

2017-09-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/rle.c (ReadRLEImage): Fix SourceForge issue #458 "Heap
	out of bounds read in ReadRLEImage()".

2017-09-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sgi.c (ReadSGIImage): Check for EOF while reading SGI
	file header.  Issue was brought to our attention by Petr Gajdos
	via email on Fri, 1 Sep 2017.

2017-09-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Allow a single scanline, strip,
	tile, to be 1000X larger than the input file in order to not cause
	problems for extremely compressible images or tile sizes much
	larger than the pixel dimensions.

2017-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/symbols.h, wand/wand_symbols.h: Update C library symbols
	which should be prefixed with 'Gm'. However, GM will not move
	Magick++ namespace because of the ImageMagick version.  Resolves
	SourceForge issue #468 "--enable-symbol-prefix does not prevent
	clashes with libMagick++ or libMagickWand?"

	* coders/png.c (DestroyJNG): DestroyJNG should be a static
	function.  Was wrongly exposed as DestroyJNGInfo in 1.3.26.  This
	is not a public function and was not intended to be part of the
	ABI.

	* coders/tiff.c (ReadTIFFImage): Limit scanline, strip, and tile
	memory allocations based on file size multiplied by a maximum
	compression ratio.  Fixes SourceForge issues #460, #461, #462,
	#463, #464 "allocation failure in ReadTIFFImage".

	* coders/pnm.c (ReadPNMImage): Require that XV 332 format have 256
	colors.  Fixes SourceForge issue #465 "NULL Pointer Dereference
	triggered by malformed file".  In our own testing the test case
	produced an assertion failure because assertions were enabled.

	* magick/colormap.c (AllocateImageColormap): Use unsigned array
	index.
